# claude-control

./: .gitignore  .npmignore  CONTRACT.md  LICENSE  README.md  e2e-voice-exit.mjs  node_modules  package-lock.json  package.json  server.js
app/: .gitignore  README.md
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
app/src-tauri/capabilities/: default.json  remote-spa.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  server_supervisor.rs
collab-engine/: README.md  package-lock.json  package.json  tsconfig.json
docs/: architecture-evolution.md  olam-contract.md
hooks/: record-pane.mjs
lib/: answer.js  auth.js  claude-cli.js  claude-print.js  client-errors.js  client-perf.js  cloud-bearer.js  codex-rpc.js  codex.js  collab-install.js  collab.js  config.js  json-file.js  match.js  media-apps.js  media-captures.js  media-watch.js  media.js  mlx.js  models.js  olam-archive.js  olam-client.js  olam-config.js  olam-health.js  olam-liveness.js  olam-prs.js  olam-sessions.js  olam-transcript.js  olam-transport.js  optimize.js  pane-registry.js  pending.js  picker-send-guard.js  pins.js  projects-roots.js  prompt.js  pty-bridge.js  push-trigger.js  push.js  reap-siblings.js  (+20 more)
public/: app.js  index.html  styles.css
scripts/: cleanup-stale-dev.mjs  eval-optimize.mjs  gen-protocol-fingerprint.mjs  install-pane-hook.mjs  install.sh  olam-contract-check.mjs
test/: README.md  answer.test.js  auth.test.js  claude-cli.test.js  claude-print.test.js  cleanup-stale-dev.test.js  client-errors.test.js  client-perf.test.js  codex-rpc.test.js  (+105 more)
(+424 files in other folders)
