[package]
name = "claude-control-spike"
version = "0.0.1"
description = "Native shell for the Claude Control SPA (desktop spike, Phase-B features)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-user-notifications = "0.3"
block2 = "0.6"

[[bin]]
name = "claude-control-spike"
path = "src/main.rs"
